@startuml

title __ZOMGMAN_3-GUN_GAME's Class Diagram__\n

  namespace logic {
    class logic.CollisionLogic {
    }
  }
  

  namespace logic {
    class logic.GunLogic {
    }
  }
  

  namespace logic {
    class logic.PlayerLogic {
    }
  }
  

  namespace main {
    class main.Game {
    }
  }
  

  namespace main {
    class main.data.Images {
    }
  }
  

  namespace main {
    class main.KeyPressedHandler {
    }
  }
  

  namespace main {
    class main.KeyReleasedHandler {
    }
  }
  

  namespace main {
    class main.Main {
    }
  }
  

  namespace main {
    class main.data.Map {
    }
  }
  

  namespace main {
    class main.data.ObjectData {
    }
  }
  

  namespace main {
    class main.Render {
    }
  }
  

  namespace objects {
    class objects.Bullet {
    }
  }
  

  namespace objects {
    class objects.DirectionalMapObject {
    }
  }
  

  namespace objects {
    class objects.Gun {
    }
  }
  

  namespace objects {
    class objects.Hand {
    }
  }
  

  namespace objects {
    class objects.MapObject {
    }
  }
  

  namespace objects {
    class objects.MovingDirectionalMapObject {
    }
  }
  

  namespace objects {
    class objects.Player {
    }
  }
  

  main.Game -up-|> javafx.application.Application
  main.Game o-- main.data.Map : map
  main.Game o-- objects.Player : player1
  main.Game o-- objects.Player : player2
  main.KeyPressedHandler .up.|> javafx.event.EventHandler
  main.KeyPressedHandler o-- main.Game : GAME
  main.KeyReleasedHandler .up.|> javafx.event.EventHandler
  main.KeyReleasedHandler o-- main.Game : GAME
  objects.Bullet -up-|> objects.MovingDirectionalMapObject
  objects.DirectionalMapObject -up-|> objects.MapObject
  objects.Gun -up-|> objects.DirectionalMapObject
  objects.Hand -up-|> objects.MapObject
  objects.MapObject o-- main.data.ObjectData : objectData
  objects.MovingDirectionalMapObject -up-|> objects.DirectionalMapObject
  objects.Player -up-|> objects.MovingDirectionalMapObject
  objects.Player o-- objects.Gun : gun
  objects.Player o-- objects.Hand : leftHand
  objects.Player o-- objects.Hand : rightHand


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
